--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-vega": "^7.6.0",
+    "vega": "^5.25.0",
+    "vega-tooltip": "^0.32.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
